<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/uploadimageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/uploadImageField"
            android:layout_width="217dp"
            android:layout_height="203dp"
            android:src="@drawable/uploadfile" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/nameQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:gravity="center"
                        android:text="@string/nameQuery"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/nameAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sc_italic"

                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/dateQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:text="@string/dateQuery"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/dateAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:inputType="date"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:gravity="start"
                        android:text="@string/datePickertitle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/starttimeQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:text="@string/timestartQuery"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/starttimeAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/starttimePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:text="@string/choosestarttimetittle"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/endtimeQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/timeendQuery"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/endtimeAnswer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:inputType="time"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/endtimePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/chooseendtime"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:textSize="12sp" />



                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/reglinkQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:text="@string/registrationlinkQuery"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/reglinkAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri" />
                </LinearLayout>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/venueQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:text="@string/venueQuery"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/venueAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:fontFamily="@font/alegreya"
                        tools:hint="@string/venueHint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/descriptionQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:fontFamily="@font/alegreya_sc_italic"
                        android:text="@string/descriptionQuery"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/descriptionAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:fontFamily="@font/alegreya"
                        tools:hint="@string/descriptionHint" />
                </TableRow>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/org_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FF6200EE"
            android:padding="2dp"
            android:fontFamily="@font/alegreya_sc_bold_italic"
            android:text="CREATE"
            android:textSize="22sp"
            tools:padding="10dp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
